compiler/tests/fixtures/valid/multiple_actions.viv
// Multiple actions in a single file

action wave:
    roles:
        @waver:
            as: initiator
        @target:
            as: recipient

action nod:
    roles:
        @nodder:
            as: initiator
        @target:
            as: recipient

action shrug:
    roles:
        @shrugger:
            as: initiator
