compiler/tests/fixtures/invalid/semantics/action_selector_targets_self.viv
// Invalid: action selector targets itself

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        selector pick;
        wave;
